Get rid of a few Boolean instantiations
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@935162 13f79535-47bb-0310-9956-ffa450edef68